--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angélica Albuquerque - Desenvolvedora e Designer</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
@@ -18,5 +26,16 @@
         </ul>
       </nav>
     </header>
+
+    <main class="introducao">
+      <img
+        src="assets/perfil.jpg"
+        alt="Foto preto e branco de Angélica Albuquerque"
+      />
+      <div>
+        <h1>Desenvolvedora <br />Front-End & <br />UI Designer</h1>
+        <p>Localizada no Brasil 🏖️</p>
+      </div>
+    </main>
   </body>
 </html>
