--- a/index.html
+++ b/index.html
@@ -37,5 +37,86 @@
         <p>Localizada no Brasil 🏖️</p>
       </div>
     </main>
+
+    <section class="experiencia" id="experiencia" aria-label="Experiência">
+      <h2 class="subtitulo">Experiência</h2>
+      <div>
+        <p class="experiencia-texto">
+          Busco me especializar como
+          <strong>desenvolvedora Front-End</strong> ✨, mas possuo bagagem
+          generalista por já ter passado por áreas que incluem
+          <strong>administração</strong>, <strong>jornalismo</strong>,
+          <strong>marketing</strong>, <strong>social media</strong> e
+          <strong>gerência de projetos</strong>.
+        </p>
+
+        <div class="empresa">
+          <span class="empresa-ano">05/2019 - 04/2021</span>
+          <h3 class="empresa-titulo">
+            Tribunal de Contas do Estado do Rio de Janeiro
+          </h3>
+          <span class="empresa-titulo">Desenvolvedora Fullstack</span>
+          <p class="empresa-texto">
+            Desenvolvimento de sistemas; criação e manutenção de aplicações Web,
+            desktop e Web APIs; testes integrados; UI Design; UX Writing; apoio
+            em gestão de projetos.
+          </p>
+          <ul>
+            <li>HTML</li>
+            <li>SASS</li>
+            <li>Bootstrap</li>
+            <li>Angular</li>
+            <li>Javascript</li>
+            <li>Typescript</li>
+            <li>.NET</li>
+            <li>C#</li>
+            <li>Azure</li>
+          </ul>
+        </div>
+
+        <div class="empresa">
+          <span class="empresa-ano">06/2016 - 05/2019</span>
+          <h3 class="empresa-titulo">Flanci Corretora de Seguros</h3>
+          <span class="empresa-titulo">Analista de Marketing/Designer</span>
+          <p class="empresa-texto">
+            Responsável pelo setor de marketing; produção e gestão de material
+            on/off; elaboração de estratégias de marketing; UI designer; UX
+            writer/researcher.
+          </p>
+          <ul>
+            <li>UI/UX</li>
+            <li>Social Media</li>
+            <li>Wordpress</li>
+            <li>Illustrator</li>
+            <li>Corel Draw</li>
+            <li>Photoshop</li>
+          </ul>
+        </div>
+
+        <div class="empresa">
+          <span class="empresa-ano">06/2014 - 05/2016</span>
+          <h3 class="empresa-titulo">
+            Ministério Público do Estado do Rio de Janeiro
+          </h3>
+          <span class="empresa-titulo">Desenvolvedora Web</span>
+          <p class="empresa-texto">
+            Migração do site MPRJ (Oracle - Liferay); manutenção do mesmo e seus
+            subsites (Liferay e Wordpress); diagramação de informativos;
+            mentoria de estagiários.
+          </p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>DreamWeaver</li>
+            <li>Liferay</li>
+            <li>Wordpress</li>
+            <li>Gestão de Conteúdo</li>
+            <li>InDesign</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
+
+<strong></strong>
