--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
 
-    <main class="introducao">
+    <main class="container introducao">
       <img
         src="assets/perfil.jpg"
         alt="Foto preto e branco de Angélica Albuquerque"
@@ -38,7 +38,11 @@
       </div>
     </main>
 
-    <section class="experiencia" id="experiencia" aria-label="Experiência">
+    <section
+      class="container experiencia"
+      id="experiencia"
+      aria-label="Experiência"
+    >
       <h2 class="subtitulo">Experiência</h2>
       <div>
         <p class="experiencia-texto">
@@ -53,15 +57,18 @@
         <div class="empresa">
           <span class="empresa-ano">05/2019 - 04/2021</span>
           <h3 class="empresa-titulo">
-            Tribunal de Contas do Estado do Rio de Janeiro
+            Tribunal de Contas do <br />Estado do Rio de Janeiro
           </h3>
           <span class="empresa-titulo">Desenvolvedora Fullstack</span>
+          <!-- <span class="empresa-cargo"
+            >Estágio | Diretoria de Tecnologia da Informação</span
+          > -->
           <p class="empresa-texto">
             Desenvolvimento de sistemas; criação e manutenção de aplicações Web,
             desktop e Web APIs; testes integrados; UI Design; UX Writing; apoio
             em gestão de projetos.
           </p>
-          <ul>
+          <ul class="empresa-habilidades">
             <li>HTML</li>
             <li>SASS</li>
             <li>Bootstrap</li>
@@ -78,12 +85,14 @@
           <span class="empresa-ano">06/2016 - 05/2019</span>
           <h3 class="empresa-titulo">Flanci Corretora de Seguros</h3>
           <span class="empresa-titulo">Analista de Marketing/Designer</span>
+          <!-- <span class="empresa-cargo"
+            >Efetivo</span -->
           <p class="empresa-texto">
             Responsável pelo setor de marketing; produção e gestão de material
             on/off; elaboração de estratégias de marketing; UI designer; UX
             writer/researcher.
           </p>
-          <ul>
+          <ul class="empresa-habilidades">
             <li>UI/UX</li>
             <li>Social Media</li>
             <li>Wordpress</li>
@@ -96,15 +105,17 @@
         <div class="empresa">
           <span class="empresa-ano">06/2014 - 05/2016</span>
           <h3 class="empresa-titulo">
-            Ministério Público do Estado do Rio de Janeiro
+            Ministério Público do <br />Estado do Rio de Janeiro
           </h3>
           <span class="empresa-titulo">Desenvolvedora Web</span>
+          <!-- <span class="empresa-cargo"
+            >Estágio | Gerência de Portal e Programação Visual</span -->
           <p class="empresa-texto">
             Migração do site MPRJ (Oracle - Liferay); manutenção do mesmo e seus
             subsites (Liferay e Wordpress); diagramação de informativos;
             mentoria de estagiários.
           </p>
-          <ul>
+          <ul class="empresa-habilidades">
             <li>HTML</li>
             <li>CSS</li>
             <li>DreamWeaver</li>
