--- a/index.html
+++ b/index.html
@@ -127,6 +127,82 @@
         </div>
       </div>
     </section>
+
+    <section class="formacao" id="formacao" aria-label="Formação">
+      <div class="formacao-container">
+        <h2 class="subtitulo">Formação</h2>
+
+        <div>
+          <p class="formacao-texto">
+            Desenvolvo projetos com <strong>HTML</strong>,
+            <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos
+            web 💻, uso <strong>React</strong> e <strong>SASS</strong>; para
+            mobile 📱, utilizo <strong>React Native</strong>. Já a prototipação,
+            faço no <strong>Figma</strong>, aproveitando conhecimentos em Adobe
+            XD, Illustrator, Corel Draw, Photoshop e Axure.
+          </p>
+
+          <ul class="faculdade-lista">
+            <li class="faculdade">
+              <span class="faculdade-tipo">Tecnólogo</span>
+              <!-- <span class="faculdade-ano">2020.2</span> -->
+              <h3 class="faculdade-curso">
+                Análise e Desenvolvimento de Sistemas
+              </h3>
+              <span class="faculdade-instituicao">Unicarioca</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <!-- <span class="faculdade-ano">2019.1</span> -->
+              <h3 class="faculdade-curso">Ciência da Computação</h3>
+              <span class="faculdade-instituicao">Unicarioca</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Tecnólogo</span>
+              <!-- <span class="faculdade-ano">2015.2</span> -->
+              <h3 class="faculdade-curso">Administração</h3>
+              <span class="faculdade-instituicao">SENAC</span>
+            </li>
+          </ul>
+
+          <div class="formacao-extra">
+            <div class="cursos">
+              <h3>Cursos Intensivos</h3>
+              <ul>
+                <li>UI Design <span>Origamid |11/2021</span></li>
+                <li>CSS Flexbox <span>Origamid |11/2021</span></li>
+                <li>Next Level Week <span>Rocketseat |11/2021</span></li>
+                <li>
+                  Google DevCarreiraUP
+                  <span>Google DevCarreiraUP |12/2020</span>
+                </li>
+                <li>Imersão GameDev <span>Alura |06/2020</span></li>
+              </ul>
+            </div>
+
+            <div class="idiomas">
+              <h3>Idiomas</h3>
+              <ul>
+                <li>Português <span>/ Nativo</span></li>
+                <li>Inglês <span>/ Avançado</span></li>
+                <li>Espanhol <span>/ Básico</span></li>
+              </ul>
+            </div>
+
+            <!-- <div class="eventos">
+              <h3>Eventos atendidos</h3>
+              <ul>
+                <li>DoWhile 2021</li>
+                <li>Programaria Summit 2021</li>
+                <li>The Developer's Conference Recife 2020</li>
+              </ul>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
 
