--- a/index.html
+++ b/index.html
@@ -203,6 +203,28 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer" id="contato">
+      <div class="footer-container">
+        <p class="footer-texto">
+          Estou disponível para novos projetos, no momento. Entre em contato
+          comigo e marcamos uma conversa! 👋
+        </p>
+        <ul class="footer-contato">
+          <li>
+            <a href="mailto:hi@frontangie.dev">hi@frontangie.dev</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/angelica-albuquerque/"
+              >Linkedin</a
+            >
+          </li>
+          <li><a href="https://github.com/angelicaalbuquerque">Github</a></li>
+        </ul>
+
+        <p class="footer-copy">frontangie.dev - alguns direitos reservados.</p>
+      </div>
+    </footer>
   </body>
 </html>
 
