Melhorias de acessibilidade

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Desenvolvedora
+    Front-End & UI Designer. Localizada no Brasil."
+    />
     <title>Angélica Albuquerque - Desenvolvedora e Designer</title>
 
+    <link rel="icon" href="assets/Favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +23,12 @@
   </head>
   <body>
     <header class="header">
-      <img src="assets/marca.svg" alt="Angélica Albuquerque" />
+      <img
+        src="assets/marca.svg"
+        alt="Angélica Albuquerque"
+        width="359"
+        height="39"
+      />
       <nav>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
@@ -31,6 +42,8 @@
       <img
         src="assets/perfil.jpg"
         alt="Foto preto e branco de Angélica Albuquerque"
+        width="360"
+        height="520"
       />
       <div>
         <h1>Desenvolvedora <br />Front-End & <br />UI Designer</h1>
