--- a/index.html
+++ b/index.html
@@ -204,14 +204,16 @@
               </ul>
             </div>
 
-            <!-- <div class="eventos">
+            <div class="eventos">
               <h3>Eventos atendidos</h3>
               <ul>
-                <li>DoWhile 2021</li>
-                <li>Programaria Summit 2021</li>
-                <li>The Developer's Conference Recife 2020</li>
+                <li>DoWhile <span>2020 | 2021</span></li>
+                <li>Programaria Summit <span>2020 | 2021</span></li>
+                <li>
+                  The Developer's Conference Recife <span>2020</span></li>
+                </li>
               </ul>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
