Lista eventos e curso ano

--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
 
           <ul class="faculdade-lista">
             <li class="faculdade">
-              <span class="faculdade-tipo">Tecnólogo</span>
-              <!-- <span class="faculdade-ano">2020.2</span> -->
+              <span class="faculdade-tipo">Tecnólogo - 2020.2</span>
               <h3 class="faculdade-curso">
                 Análise e Desenvolvimento de Sistemas
               </h3>
@@ -166,15 +165,13 @@
             </li>
 
             <li class="faculdade">
-              <span class="faculdade-tipo">Bacharel</span>
-              <!-- <span class="faculdade-ano">2019.1</span> -->
+              <span class="faculdade-tipo">Bacharel - 2019.1</span>
               <h3 class="faculdade-curso">Ciência da Computação</h3>
               <span class="faculdade-instituicao">Unicarioca</span>
             </li>
 
             <li class="faculdade">
-              <span class="faculdade-tipo">Tecnólogo</span>
-              <!-- <span class="faculdade-ano">2015.2</span> -->
+              <span class="faculdade-tipo">Tecnólogo - 2015.2</span>
               <h3 class="faculdade-curso">Administração</h3>
               <span class="faculdade-instituicao">SENAC</span>
             </li>
@@ -184,14 +181,14 @@
             <div class="cursos">
               <h3>Cursos Intensivos</h3>
               <ul>
-                <li>UI Design <span>Origamid |11/2021</span></li>
-                <li>CSS Flexbox <span>Origamid |11/2021</span></li>
-                <li>Next Level Week <span>Rocketseat |11/2021</span></li>
+                <li>UI Design <span>Origamid - 11/2021</span></li>
+                <li>CSS Flexbox <span>Origamid - 11/2021</span></li>
+                <li>Next Level Week <span>Rocketseat - 11/2021</span></li>
                 <li>
                   Google DevCarreiraUP
-                  <span>Google DevCarreiraUP |12/2020</span>
+                  <span>Google DevCarreiraUP - 12/2020</span>
                 </li>
-                <li>Imersão GameDev <span>Alura |06/2020</span></li>
+                <li>Imersão GameDev <span>Alura - 06/2020</span></li>
               </ul>
             </div>
 
@@ -209,8 +206,10 @@
               <ul>
                 <li>DoWhile <span>2020 | 2021</span></li>
                 <li>Programaria Summit <span>2020 | 2021</span></li>
+                <li>Pelotas JS <span>2020</span></li>
                 <li>
-                  The Developer's Conference Recife <span>2020</span></li>
+                  The Developer's Conference Recife: Web e Front-End <span>2020</span></li>
+                  <li>The Developer's Conference Recife: JavaScript e NodeJS <span>2020</span></li>
                 </li>
               </ul>
             </div>
