Inclusão de habilidade

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             writer/researcher.
           </p>
           <ul class="empresa-habilidades">
-            <li>UI/UX</li>
+            <li>UI Design</li>
+            <li>UX</li>
             <li>Social Media</li>
             <li>Wordpress</li>
             <li>Illustrator</li>
