--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <title>Angélica Albuquerque - Desenvolvedora e Designer</title>
 
-    <link rel="icon" href="assets/Favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -231,10 +231,14 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/angelica-albuquerque/"
-              >Linkedin</a
-            >
+              > <img src="assets/linkedin.svg" alt="Linkedin"></a>
           </li>
-          <li><a href="https://github.com/angelicaalbuquerque">Github</a></li>
+          <li><a href="https://github.com/angelicaalbuquerque">
+            <img src="assets/github.svg" alt="Github">
+          </a></li>
+          <li><a href="https://twitter.com/frontangie">
+            <img src="assets/twitter.svg" alt="Twitter">
+          </a></li>
         </ul>
 
         <p class="footer-copy">frontangie.dev - alguns direitos reservados.</p>
