--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/angelica-albuquerque/"
-              > <img src="assets/linkedin.svg" alt="Linkedin"></a>
+              target="_blank"> <img src="assets/linkedin.svg" alt="Linkedin"></a>
           </li>
-          <li><a href="https://github.com/angelicaalbuquerque">
+          <li><a href="https://github.com/angelicaalbuquerque" target="_blank">
             <img src="assets/github.svg" alt="Github">
           </a></li>
-          <li><a href="https://twitter.com/frontangie">
+          <li><a href="https://twitter.com/frontangie" target="_blank">
             <img src="assets/twitter.svg" alt="Twitter">
           </a></li>
         </ul>
