Inclusão de empresa cargo

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
           <h3 class="empresa-titulo">
             Tribunal de Contas do <br />Estado do Rio de Janeiro
           </h3>
-          <span class="empresa-titulo">Desenvolvedora Fullstack</span>
-          <!-- <span class="empresa-cargo"
-            >Estágio | Diretoria de Tecnologia da Informação</span
-          > -->
+
+          <div class="cargo-infos">
+            <span class="empresa-titulo">Desenvolvedora Fullstack</span>
+            <span class="empresa-cargo">Estágio | Diretoria de Tecnologia da Informação</span>
+          </div>
+
           <p class="empresa-texto">
             Desenvolvimento de sistemas; criação e manutenção de aplicações Web,
             desktop e Web APIs; testes integrados; UI Design; UX Writing; apoio
@@ -97,9 +99,14 @@
         <div class="empresa">
           <span class="empresa-ano">06/2016 - 05/2019</span>
           <h3 class="empresa-titulo">Flanci Corretora de Seguros</h3>
-          <span class="empresa-titulo">Analista de Marketing/Designer</span>
-          <!-- <span class="empresa-cargo"
-            >Efetivo</span -->
+
+          <div class="cargo-infos">
+            <span class="empresa-titulo">Analista de Marketing/Designer</span>
+            <span class="empresa-cargo"
+              >Efetivo
+            </span>
+          </div>
+
           <p class="empresa-texto">
             Responsável pelo setor de marketing; produção e gestão de material
             on/off; elaboração de estratégias de marketing; UI designer; UX
@@ -121,9 +128,12 @@
           <h3 class="empresa-titulo">
             Ministério Público do <br />Estado do Rio de Janeiro
           </h3>
-          <span class="empresa-titulo">Desenvolvedora Web</span>
-          <!-- <span class="empresa-cargo"
-            >Estágio | Gerência de Portal e Programação Visual</span -->
+          <div class="cargo-infos">
+            <span class="empresa-titulo">Desenvolvedora Web</span>
+            <span class="empresa-cargo"
+              >Estágio | Gerência de Portal e Programação Visual</span>
+          </div>
+
           <p class="empresa-texto">
             Migração do site MPRJ (Oracle - Liferay); manutenção do mesmo e seus
             subsites (Liferay e Wordpress); diagramação de informativos;
