--- a/index.html
+++ b/index.html
@@ -338,12 +338,14 @@
             <div class="cursos">
               <h3>Cursos Intensivos</h3>
               <ul>
-                <li>UI Design <span>Origamid | 11/2021</span></li>
-                <li>CSS Flexbox <span>Origamid | 11/2021</span></li>
+                <li><span class="titulo-curso">UI Design <a href="https://drive.google.com/file/d/1Q6E2lQqlge_6uuvRqjNBWUqZi5s8kQPP/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
+                
+                <li><span class="titulo-curso">CSS Flexbox <a href="https://drive.google.com/file/d/1pLYiJ_0Tt75Ut8OlIWkJ6riUXMexr9j7/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
                 <li>Next Level Week <span>Rocketseat | 11/2021</span></li>
                 <li>
-                  Google DevCarreiraUP
-                  <span>Google DevCarreiraUP | 12/2020</span>
+                  
+                  <span class="titulo-curso">Google DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google DevRel Brasil
+                    | 12/2020</span>
                 </li>
                 <li>Imersão GameDev <span>Alura | 06/2020</span></li>
               </ul>
@@ -361,12 +363,13 @@
             <div class="eventos">
               <h3>Eventos atendidos</h3>
               <ul>
-                <li>DoWhile <span>2021 - 2020</span></li>
-                <li>Programaria Summit <span>2021 - 2020</span></li>
-                <li>Pelotas JS <span>2020</span></li>
-                <li>
-                  The Developer's Conference Recife: Web e Front-End <span>2020</span></li>
-                  <li>The Developer's Conference Recife: JavaScript e NodeJS <span>2020</span></li>
+                <li><span class="titulo-evento">DoWhile  <a href="https://drive.google.com/file/d/1jcTcMPw-TBS2TNqgaWmbd67QASSd4MIU/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
+                <li><span class="titulo-evento">Programaria Summit  <a href="https://drive.google.com/drive/folders/1VvoLXIaXn5eiIafTkHLzNlyFdCWIZz3c?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
+                <li><span class="titulo-evento">Pelotas JS <a href="https://drive.google.com/file/d/1fumFxuPTpiKtP6LKhT9KJJd-wRUu_58s/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
+                <li><span class="titulo-evento">The Developer's Conference Recife: Web e Front-End <a href="https://drive.google.com/file/d/1kAx2oGhenNJLI06CBdfhxwnXgzRsjatT/view?usp=sharing
+                  " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
+                  <li><span class="titulo-evento">The Developer's Conference Recife: JavaScript e NodeJS<a href="https://drive.google.com/file/d/14lgscahZvy_y4iVC9y0DDK0hNr2zkpKn/view?usp=sharing
+                    " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
                 </li>
               </ul>
             </div>
