--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
           <ul class="faculdade-lista">
             <li class="faculdade">
-              <span class="faculdade-tipo">Tecnólogo - 2020.2</span>
+              <span class="faculdade-tipo">Tecnóloga - 2020.2</span>
               <h3 class="faculdade-curso">
                 Análise e Desenvolvimento de Sistemas
               </h3>
@@ -322,13 +322,13 @@
             </li>
 
             <li class="faculdade">
-              <span class="faculdade-tipo">Bacharel - 2019.1</span>
+              <span class="faculdade-tipo">Bacharela - 2019.1</span>
               <h3 class="faculdade-curso">Ciência da Computação</h3>
               <span class="faculdade-instituicao">Unicarioca</span>
             </li>
 
             <li class="faculdade">
-              <span class="faculdade-tipo">Tecnólogo - 2015.2</span>
+              <span class="faculdade-tipo">Tecnóloga - 2015.2</span>
               <h3 class="faculdade-curso">Administração</h3>
               <span class="faculdade-instituicao">SENAC</span>
             </li>
