Style em texto de voluntariado

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="voluntariado">
-          <p class="experiencia-texto">
+          <p class="experiencia-texto" style="margin-top: 60px;">
             Eu <strong>amo colaborar</strong> 🥰 com projetos que eu acredito, por isso busco me envolver em alguns deles como <strong>voluntária</strong>.
           </p>
 
