Inclusão de portfolio no menu

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <nav>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
           <li><a href="#formacao">Formação</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
@@ -210,12 +211,12 @@
 
 
 
-    <section class="projetos" id="projetos" aria-label="Projetos">
-      <div class="projetos-container">
+    <section class="portfolio" id="portfolio" aria-label="Portfolio">
+      <div class="portfolio-container">
         <h2 class="subtitulo">Portfólio</h2>
 
         <div>
-          <p class="projetos-texto">
+          <p class="portfolio-texto">
             Desenvolvo projetos com <strong>HTML</strong>,
             <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos
             web 💻, uso <strong>React</strong> e <strong>SASS</strong>; para
