--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Desenvolvedora
     Front-End & UI Designer. Localizada no Brasil."
     />
-    <title>Angélica Albuquerque - Desenvolvedora e Designer</title>
+    <title>Angélica Albuquerque - Desenvolvedora e UI Designer</title>
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -54,6 +54,7 @@
       </div>
     </main>
 
+    <!-- EXPERIÊNCIA -->
     <section
       class="container experiencia"
       id="experiencia"
@@ -209,8 +210,7 @@
       </div>
     </section>
 
-
-
+    <!-- PORTFÓLIO -->
     <section class="portfolio" id="portfolio" aria-label="Portfolio">
       <div class="portfolio-container">
         <h2 class="subtitulo">Portfólio</h2>
@@ -224,86 +224,98 @@
             faço no <strong>Figma</strong>, aproveitando conhecimentos em Adobe
             XD, Illustrator, Corel Draw, Photoshop e Axure.
           </p>
+          
+          <div class="portfolio-item">
+            <details> 
+              <summary class="accordion">
+                Clube Brasil Seguros
+                <span>#Typescript</span>
+                <span>#React</span>
+                <span>#SASS</span>
+              </summary> 
+              <p>Site estático para empresa de seguros. Desenvolvido em HTML, SASS, TypeScript e React, com Sendgrid para o formulário de contato. Também fiz o UI Design e UX Writting (com exceção do conteúdo dos modais, enviado pelo cliente).</p>  
+            </details>  
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              Clube Brasil Seguros
-              <span>#Typescript</span>
-              <span>#React</span>
-              <span>#SASS</span>
-            </summary> 
-            <p>Site estático para empresa de seguros. Desenvolvido em HTML, SASS, TypeScript e React, com Sendgrid para o formulário de contato. Também fiz o UI Design e UX Writting (com exceção do conteúdo dos modais, enviado pelo cliente).</p>  
-          </details>  
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                DoWhile
+                <span>#Typescript</span>
+                <span>#React</span>
+                <span>#ReactNative</span>
+                <span>#NodeJS</span>
+              </summary> 
+              <p>Construção de mural de depoimentos/expectativas sobre o evento DoWhile 2021 (Rocketseat). A aplicação utiliza várias tecnologias, como OAuth para fazer login com Github para que o usuário consiga deixar suas mensagens. Conforme as mensagens são adicionadas, em tempo real elas aparecem no mural com o uso do Socket.IO.</p>  
+            </details> 
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              DoWhile
-              <span>#Typescript</span>
-              <span>#React</span>
-              <span>#ReactNative</span>
-              <span>#NodeJS</span>
-            </summary> 
-            <p>Construção de mural de depoimentos/expectativas sobre o evento DoWhile 2021 (Rocketseat). A aplicação utiliza várias tecnologias, como OAuth para fazer login com Github para que o usuário consiga deixar suas mensagens. Conforme as mensagens são adicionadas, em tempo real elas aparecem no mural com o uso do Socket.IO.</p>  
-          </details> 
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                As Aventuras de Hipsta
+                <span>#GameDev</span>
+                <span>#JavaScript</span>
+                <span>#P5.js</span>
+              </summary> 
+              <p>"As Aventuras de Hipsta" é um game desenvolvido para desktop. Nesta história, a bruxinha Hipsta tem a missão de proteger sua floresta verde e florida de seu principal inimigo, conhecido como Troll, um ogro tristonho e choroso, que foi expulso ao poluir o bosque com suas lágrimas, que arruinavam a beleza do lugar.</p>  
+            </details> 
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              As Aventuras de Hipsta
-              <span>#GameDev</span>
-              <span>#JavaScript</span>
-              <span>#P5.js</span>
-            </summary> 
-            <p>"As Aventuras de Hipsta" é um game desenvolvido para desktop. Nesta história, a bruxinha Hipsta tem a missão de proteger sua floresta verde e florida de seu principal inimigo, conhecido como Troll, um ogro tristonho e choroso, que foi expulso ao poluir o bosque com suas lágrimas, que arruinavam a beleza do lugar.</p>  
-          </details> 
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                Ecoleta
+                <span>#Typescript</span>
+                <span>#React</span>
+                <span>#ReactNative</span>
+                <span>#NodeJS</span>
+              </summary> 
+              <p>Desenvolvimento de aplicação web e mobile, com utilização de HTML, CSS, TypeScript e React no front-end, React Native e Expo no mobile, Node.JS e Express no back-end, SQLite no banco de dados. O projeto é um marketplace que ajuda pessoas a encontrarem pontos de coleta de resíduos de forma eficiente. Construído para promover o Dia Mundial do Meio Ambiente.</p>  
+            </details> 
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              Ecoleta
-              <span>#Typescript</span>
-              <span>#React</span>
-              <span>#ReactNative</span>
-              <span>#NodeJS</span>
-            </summary> 
-            <p>Desenvolvimento de aplicação web e mobile, com utilização de HTML, CSS, TypeScript e React no front-end, React Native e Expo no mobile, Node.JS e Express no back-end, SQLite no banco de dados. O projeto é um marketplace que ajuda pessoas a encontrarem pontos de coleta de resíduos de forma eficiente. Construído para promover o Dia Mundial do Meio Ambiente.</p>  
-          </details> 
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                dev.Finance$
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#JavaScript</span>
+              </summary> 
+              <p>Construção de uma aplicação financeira para treinar habilidades com JavaScript, CSS, HTML, e descobrir, através das melhores práticas, conceitos importantes que ajudam a construir uma base sólida em programação.</p>  
+            </details>
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              dev.Finance$
-              <span>#HTML</span>
-              <span>#CSS</span>
-              <span>#JavaScript</span>
-            </summary> 
-            <p>Construção de uma aplicação financeira para treinar habilidades com JavaScript, CSS, HTML, e descobrir, através das melhores práticas, conceitos importantes que ajudam a construir uma base sólida em programação.</p>  
-          </details> 
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                Proffy
+                <span>#Typescript</span>
+                <span>#React</span>
+                <span>#ReactNative</span>
+                <span>#NodeJS</span>
+              </summary> 
+              <p>Aplicação web e mobile, construída com HTML, CSS, React e TypeScript no front-end, React Native e Expo no mobile, NodeJS no back-end E SQLite para o banco de dados. O projeto é uma plataforma de estudos online, onde é possível tanto se cadastrar como instrutor quanto encontrar vários professores para ensinar.</p>  
+            </details> 
+          </div>
 
-          <details>  
-            <summary class="accordion">
-              Proffy
-              <span>#Typescript</span>
-              <span>#React</span>
-              <span>#ReactNative</span>
-              <span>#NodeJS</span>
-            </summary> 
-            <p>Aplicação web e mobile, construída com HTML, CSS, React e TypeScript no front-end, React Native e Expo no mobile, NodeJS no back-end E SQLite para o banco de dados. O projeto é uma plataforma de estudos online, onde é possível tanto se cadastrar como instrutor quanto encontrar vários professores para ensinar.</p>  
-          </details> 
-
-          <details>  
-            <summary class="accordion">
-              Flexblog
-              <span>#HTML</span>
-              <span>#CSS</span>
-              <span>#Flexbox</span>
-            </summary> 
-            <p>Desenvolvimento de página estática e responsiva, como estudo para fortalecer práticas e conceitos das propriedades do Flexblox.</p>  
-          </details> 
-
-
-        
+          <div class="portfolio-item">
+            <details>  
+              <summary class="accordion">
+                Flexblog
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#Flexbox</span>
+              </summary> 
+              <p>Desenvolvimento de página estática e responsiva, como estudo para fortalecer práticas e conceitos das propriedades do Flexblox.</p>  
+           </details> 
+          </div>
         </div>
       </div>
     </section>
 
+    <!-- FORMAÇÃO -->
     <section class="formacao" id="formacao" aria-label="Formação">
       <div class="formacao-container">
         <h2 class="subtitulo">Formação</h2>
@@ -405,6 +417,7 @@
       </div>
     </footer>
 
+    <!--  -->
     <script>
       let acc = document.getElementsByClassName("accordion");
       let i;
@@ -414,6 +427,6 @@
           this.classList.toggle("active");
         });
       }
-      </script>
+    </script>
   </body>
 </html>
