--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       />
       <div>
         <h1>Desenvolvedora <br />Front-End & <br />UI Designer</h1>
-        <p>Localizada no Brasil 🏖️</p>
+        <p>Minhas diretrizes envolvem criar códigos acessíveis e otimizar experiências pensando — com empatia, respeito e carinho — em inclusão social e diversidade.</p>
       </div>
     </main>
 
