Alteração em nome de curso

--- a/index.html
+++ b/index.html
@@ -385,8 +385,7 @@
                 <li>Next Level Week <span>Rocketseat | 11/2021</span></li>
                 <li>
                   
-                  <span class="titulo-curso">Google DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google DevRel Brasil
-                    | 12/2020</span>
+                  <span class="titulo-curso">Google DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google | 12/2020</span>
                 </li>
                 <li>Imersão GameDev <span>Alura | 06/2020</span></li>
               </ul>
