--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
                 <li><span class="titulo-evento">DoWhile  <a href="https://drive.google.com/file/d/1jcTcMPw-TBS2TNqgaWmbd67QASSd4MIU/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
                 <li><span class="titulo-evento">Programaria Summit  <a href="https://drive.google.com/drive/folders/1VvoLXIaXn5eiIafTkHLzNlyFdCWIZz3c?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
                 <li><span class="titulo-evento">Pelotas JS <a href="https://drive.google.com/file/d/1fumFxuPTpiKtP6LKhT9KJJd-wRUu_58s/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
-                <li><span class="titulo-evento">The Developer's Conference Recife: Web e Front-End <a href="https://drive.google.com/file/d/1kAx2oGhenNJLI06CBdfhxwnXgzRsjatT/view?usp=sharing
+                <li><span class="titulo-evento">TDC Recife: Web e Front-End <a href="https://drive.google.com/file/d/1kAx2oGhenNJLI06CBdfhxwnXgzRsjatT/view?usp=sharing
                   " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
-                  <li><span class="titulo-evento">The Developer's Conference Recife: JavaScript e NodeJS<a href="https://drive.google.com/file/d/14lgscahZvy_y4iVC9y0DDK0hNr2zkpKn/view?usp=sharing
+                  <li><span class="titulo-evento">TDC Recife: JavaScript e NodeJS<a href="https://drive.google.com/file/d/14lgscahZvy_y4iVC9y0DDK0hNr2zkpKn/view?usp=sharing
                     " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
                 </li>
               </ul>
