--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
             <div class="cursos">
               <h3>Cursos Intensivos</h3>
               <ul>
-                <li><span class="titulo-curso">Produtividade e Gestão de Tempo</span> <span>Conquer | 01/2022</span></li>
+                <li><span class="titulo-curso">Produtividade <a href="https://drive.google.com/file/d/1i6BiAhIDRkd9jmEWdmwektOfnd9P5I5N/view?usp=sharing " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 01/2022</span></li>
                 <li><span class="titulo-curso">UI Design <a href="https://drive.google.com/file/d/1Q6E2lQqlge_6uuvRqjNBWUqZi5s8kQPP/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
                 
                 <li><span class="titulo-curso">CSS Flexbox <a href="https://drive.google.com/file/d/1pLYiJ_0Tt75Ut8OlIWkJ6riUXMexr9j7/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
                 <li>Next Level Week <span>Rocketseat | 11/2021</span></li>
                 <li>
                   
-                  <span class="titulo-curso">Google DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google | 12/2020</span>
+                  <span class="titulo-curso">DevCarreiraUP<a href="https://drive.google.com/file/d/11504EMbQ2qrh-boJSRiUPYFyo5_59tFc/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Google | 12/2020</span>
                 </li>
                 <li>Imersão GameDev <span>Alura | 06/2020</span></li>
               </ul>
@@ -404,7 +404,7 @@
             <div class="eventos">
               <h3>Eventos atendidos</h3>
               <ul>
-                <li><span class="titulo-evento">DoWhile  <a href="https://drive.google.com/file/d/1jcTcMPw-TBS2TNqgaWmbd67QASSd4MIU/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
+                <li><span class="titulo-evento">DoWhile  <a href="https://drive.google.com/drive/folders/1ci4TYmkfRBuT6IXLCrA3LCptVBC8WLnl?usp=sharing  " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
                 <li><span class="titulo-evento">Programaria Summit  <a href="https://drive.google.com/drive/folders/1VvoLXIaXn5eiIafTkHLzNlyFdCWIZz3c?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2021 - 2020</span></li>
                 <li><span class="titulo-evento">Pelotas JS <a href="https://drive.google.com/file/d/1fumFxuPTpiKtP6LKhT9KJJd-wRUu_58s/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span><span>2020</span></li>
                 <li><span class="titulo-evento">TDC Recife: Web e Front-End <a href="https://drive.google.com/file/d/1kAx2oGhenNJLI06CBdfhxwnXgzRsjatT/view?usp=sharing
