Atualização de Experiência

--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@
         </p>
 
         <div class="empresa">
+          <span class="empresa-ano">04/2022 - atualmente</span>
+          <h3 class="empresa-titulo">
+            Siteware
+          </h3>
+
+          <div class="cargo-infos">
+            <span class="empresa-titulo">
+              Front-End Software Engineer</span>
+            <span class="empresa-cargo">Efetivo | Produto</span>
+          </div>
+
+          <p class="empresa-texto">
+            Construção, projeção e manutenção da arquitetura do STRATWs One, software presente em mais de 12 países, utilizando Angular e Razor como principais tecnologias, além de técnicas de UX/UI.
+          </p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>SASS</li>
+            <li>UX</li>
+            <li>Angular</li>
+            <li>Typescript</li>
+            <li>Razor</li>
+            <li>C#</li>
+            <li>Azure</li>
+          </ul>
+        </div>
+
+        <div class="empresa">
           <span class="empresa-ano">05/2019 - 04/2021</span>
           <h3 class="empresa-titulo">
             Tribunal de Contas do <br />Estado do Rio de Janeiro
