--- a/index.html
+++ b/index.html
@@ -406,7 +406,9 @@
             <div class="cursos">
               <h3>Cursos Intensivos</h3>
               <ul>
-                <li><span class="titulo-curso">Produtividade <a href="https://drive.google.com/file/d/1i6BiAhIDRkd9jmEWdmwektOfnd9P5I5N/view?usp=sharing " target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 01/2022</span></li>
+                <li><span class="titulo-curso">Imersão React</span> <span>Raro Academy | 05/2022</span></li>
+                <li><span class="titulo-curso">Intel. Emocional <a href="https://drive.google.com/file/d/1US3hGRqi12Gnmvjx-0lWdYlmpH6wxPzO/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 04/2022</span></li>
+                <li><span class="titulo-curso">Produtividade <a href="https://drive.google.com/file/d/1i6BiAhIDRkd9jmEWdmwektOfnd9P5I5N/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Conquer | 01/2022</span></li>
                 <li><span class="titulo-curso">UI Design <a href="https://drive.google.com/file/d/1Q6E2lQqlge_6uuvRqjNBWUqZi5s8kQPP/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
                 
                 <li><span class="titulo-curso">CSS Flexbox <a href="https://drive.google.com/file/d/1pLYiJ_0Tt75Ut8OlIWkJ6riUXMexr9j7/view?usp=sharing" target="_blank" class="imagem-anexos"><img src="assets/file-earmark-check.svg" alt="Anexo"></a></span> <span>Origamid | 11/2021</span></li>
