Atualização de foto de perfil

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main class="container introducao">
       <img
-        src="assets/perfil.jpg"
+        src="assets/perfil-2023-color.jpg"
         alt="Foto preto e branco de Angélica Albuquerque"
         width="360"
         height="520"
