--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main class="container introducao">
       <img
-        src="assets/perfil-2023-color.jpg"
+        src="assets/perfil.jpg"
         alt="Foto preto e branco de Angélica Albuquerque"
         width="360"
         height="520"
@@ -108,7 +108,6 @@
             <span class="empresa-titulo">Desenvolvedora Fullstack</span>
             <span class="empresa-cargo">Estágio | Diretoria de Tecnologia da Informação</span>
           </div>
-
           <p class="empresa-texto">
             Desenvolvimento de sistemas; criação e manutenção de aplicações Web,
             desktop e Web APIs; testes integrados; UI Design; UX Writing; apoio
