--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Desenvolvedora
     Front-End & UI Designer. Localizada no Brasil." />
-  <title>Angélica Albuquerque - Desenvolvedora e UI Designer</title>
+  <title>Angélica Albuquerque - Front-end Developer | Web & Mobile</title>
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -35,7 +35,7 @@
   <main class="container introducao">
     <img src="assets/perfil-2023-color.jpg" alt="Foto preto e branco de Angélica Albuquerque" width="360" height="520" />
     <div>
-      <h1>Desenvolvedora <br />Front-End & <br />UI Designer</h1>
+      <h1>Front-end <br />Developer <br />Web & Mobile</h1>
       <p>Localizada no Brasil 🏖️</p>
     </div>
   </main>
