--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img src="assets/perfil-2023-color.jpg" alt="Foto preto e branco de Angélica Albuquerque" width="360" height="520" />
     <div>
       <h1>Front-end <br />Developer <br />Web & Mobile</h1>
-      <p>Localizada no Brasil 🏖️</p>
+      <p>📍 Localizada no Brasil</p>
     </div>
   </main>
 
