Updating "about me"

--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
     <h2 class="subtitulo">Experiência</h2>
     <div>
       <p class="experiencia-texto">
-        Busco me especializar como
-        <strong>desenvolvedora Front-End</strong> ✨, mas possuo bagagem
-        generalista por já ter passado por áreas que incluem
-        <strong>administração</strong>, <strong>jornalismo</strong>,
-        <strong>marketing</strong>, <strong>social media</strong> e
-        <strong>gerência de projetos</strong>.
+        Além de <strong>Front-end Developer</strong>, área onde busco me especializar ✨, sou entusiasta de <strong>Tecnologia da Informação</strong> e <strong>UX</strong>. Sou apaixonada por criar experiências <strong>inclusivas</strong> e <strong>acessíveis</strong>. Acredito no <strong>poder transformador</strong> da tecnologia e estou comprometida em impactar positivamente as pessoas com <strong>soluções amigáveis</strong> e <strong>inovadoras</strong>.
       </p>
 
       <div class="empresa">
